--- a/project/templates/activities/vietstraw.html
+++ b/project/templates/activities/vietstraw.html
@@ -34,9 +34,10 @@
     <p class="post-text">Joining forces with EcoSmart Solutions, <a
         href="https://theecotouch.com/?fbclid=IwAR3uYKHbE5Zz9Ic6Bo_zdSD1u80HGGDomQnCafq4zXR1Vp-fBPIkTWdc5TQ">ECO
         Touch</a> embarks on an exhilarating journey alongside VietStraw! As
-      Vietnam's trailblazer in the green movement, VietStraw has introduced rice straws - an eco-friendly alternative
+      Vietnam's trailblazer in the green movement, VietStraw has introduced <a href="https://theecotouch.com/product/">rice
+        straws</a> - an eco-friendly alternative
       that perfectly aligns with the commitment to sustainability. Empowering consumers and businesses to switch from
-      plastic to biodegradable rice straws, <a
+      plastic to biodegradable <a href="https://theecotouch.com/product/">rice straws</a>, <a
       href="https://theecotouch.com/?fbclid=IwAR3uYKHbE5Zz9Ic6Bo_zdSD1u80HGGDomQnCafq4zXR1Vp-fBPIkTWdc5TQ">ECO
       Touch</a> aims to expand its impact to international markets. </p>
     <p class="post-text">Welcome to <a
@@ -45,7 +46,7 @@
       European market. As
       the pioneer and creator of VietStraw in Vietnam, <a
       href="https://theecotouch.com/?fbclid=IwAR3uYKHbE5Zz9Ic6Bo_zdSD1u80HGGDomQnCafq4zXR1Vp-fBPIkTWdc5TQ">ECO
-      Touch</a> proudly presents biodegradable rice straws - an
+      Touch</a> proudly presents biodegradable <a href="https://theecotouch.com/product/">rice straws</a> - an
       impressive eco-conscious product captivating Vietnamese consumers. </p>
     <p class="post-text">The mission revolves around building a greener and cleaner Vietnam through eco-friendly
       solutions, with rice
@@ -59,7 +60,8 @@
       positive environmental impact and enhancing people's lives.</p>
     <p class="post-text">A pivotal milestone was the acquisition of the first rice straw production machine, marking the
       beginning of an
-      eco-friendly production process and ensuring product excellence. ECO Touch's first rice straws emerged, carrying a
+      eco-friendly production process and ensuring product excellence. ECO Touch's first <a
+        href="https://theecotouch.com/product/">rice straws</a> emerged, carrying a
       powerful message of sustainability and significance for the community.</p>
     <p class="post-text">First partners, believers in <a
       href="https://theecotouch.com/?fbclid=IwAR3uYKHbE5Zz9Ic6Bo_zdSD1u80HGGDomQnCafq4zXR1Vp-fBPIkTWdc5TQ">ECO
